[gd_scene load_steps=34 format=2]

[ext_resource path="res://Sprites/Elevator_final.png" type="Texture" id=1]
[ext_resource path="res://Level_Objects/LevelExit.gd" type="Script" id=2]
[ext_resource path="res://Sprites/charfinal.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 64, 96 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 320, 96, 64, 96 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 256, 96, 64, 96 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 192, 96, 64, 96 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 64, 96, 64, 96 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 64, 96 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 96 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 96 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 96 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 96 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 96 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 96 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 64, 96 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 448, 0, 64, 96 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 64, 96 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 64, 96 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 64, 96, 64, 96 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 192, 96, 64, 96 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 256, 96, 64, 96 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 320, 96, 64, 96 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 13 ) ],
"loop": false,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": false,
"name": "opening",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "descending",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": false,
"name": "closing",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 0, 192, 64, 96 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 64, 192, 64, 96 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 128, 192, 64, 96 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 192, 192, 64, 96 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 256, 192, 64, 96 )

[sub_resource type="SpriteFrames" id=26]
animations = [ {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 8, 8 )

[node name="Elevator" type="StaticBody2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 11 )

[node name="FakePlayer" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -0.794601, 8.79459 )
frames = SubResource( 20 )

[node name="TransparentDoor" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 26 )

[node name="OpenCollider" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -24, -32, -24, -8, -16, 0, -8, -8, 8, -8, 16, 0, 24, -8, 24, -32, 16, -40, -16, -40 )

[node name="ClosedCollider" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -24, 32, -24, 16, -24, -32, -16, -40, 16, -40, 24, -32, 24, -8, 24, 32, 16, 40, -16, 40 )
disabled = true

[node name="ExitRegion" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitRegion"]
shape = SubResource( 12 )
[connection signal="animation_finished" from="TransparentDoor" to="." method="_on_TransparentDoor_animation_finished"]
[connection signal="body_entered" from="ExitRegion" to="." method="_on_ExitRegion_body_entered"]
